--- a/Product-App/sold.html
+++ b/Product-App/sold.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
         <div class="container justify-content-end">
-            <a href="products.html" class="btn btn-primary btn-lg m-2"><i class="fa fa-arrow-circle-left" aria-hidden="true"><span class="px-2">BACK</span></i></a>
+            <a href="index.html" class="btn btn-primary btn-lg m-2"><i class="fa fa-arrow-circle-left" aria-hidden="true"><span class="px-2">BACK</span></i></a>
         </div>
     </nav>
     <div class="container p-4">
